# nebbie-editor

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md
.cursor/: environment.json  setup-git-auth.sh
.github/workflows/: ci.yml  packages.yml
docs/: ARCHITECTURE.md  COORDINATOR.md  GIT-PUSH-DEFINITIVO.md  MANUALE_INSTALLAZIONE.md  PLATFORM.md  PROJECT_SUMMARY.md  PUBBLICAZIONE.md  ROADMAP.md  SYNC.md  TRANSFER-AGENT.md
installer/windows/: nebbie-editor.iss
nebbie-core/: CMakeLists.txt
nebbie-core/include/nebbie/: constants.hpp  edit.hpp  file_io.hpp  fread.hpp  io.hpp  lib_context.hpp  mob_catalog.hpp  obj_catalog.hpp  overlay_io.hpp  room_catalog.hpp  session.hpp  time_compat.hpp  types.hpp  validate.hpp  world.hpp  world_index.hpp  zone_catalog.hpp  zone_graph.hpp
nebbie-core/src/: act_io.cpp  dam_io.cpp  edit.cpp  file_io.cpp  fread.cpp  gui_io.cpp  lib_context.cpp  lib_io.cpp  mob_catalog.cpp  mob_io.cpp  obj_catalog.cpp  obj_io.cpp  overlay_io.cpp  pos_io.cpp  room_catalog.cpp  session.cpp  shp_io.cpp  spe_io.cpp  validate.cpp  wld_io.cpp  world.cpp  world_index.cpp  zon_io.cpp  zone_catalog.cpp  zone_graph.cpp
nebbie-qt/: CMakeLists.txt  app_config.cpp  app_config.hpp  coordinator_client.cpp  coordinator_client.hpp  flag_group_widget.cpp  flag_group_widget.hpp  main.cpp  main_window.cpp  main_window.hpp  mob_editor_widget.cpp  mob_editor_widget.hpp  msvc_qt_compat.hpp  nebbieedit.desktop  nebbieedit.qrc  obj_editor_widget.cpp  obj_editor_widget.hpp  path_util.hpp  room_editor_widget.cpp  room_editor_widget.hpp  world_zone_map_widget.cpp  world_zone_map_widget.hpp  zone_editor_widget.cpp  zone_editor_widget.hpp  zone_map_widget.cpp  zone_map_widget.hpp
nebbie-qt/icons/: nebbieedit.icns
nebbiedit/: CMakeLists.txt  cli_parse.cpp  cli_parse.hpp  main.cpp  shell.cpp  shell.hpp
scripts/: bin-path.sh  build-manuale-pdf.sh  build.ps1  build.sh  create-export-zip.sh  export-production-world.sh  export-unpushed.sh  export-world-index.sh  fetch-test-data.ps1  fetch-test-data.sh  getworldlocal.sh  git-push.sh  import-overlays-to-db.py  import-overlays-to-db.sh  install-deps.ps1  install-deps.sh  install-linux.sh  install-macos.sh  make-macos-icon.py  make-windows-icon.py  package-deb.sh  package-dmg.sh  package-windows-installer.ps1  package-windows.ps1  package.sh  prepare-sample-lib.sh  prepare-windows-package.ps1  production-world.env.example  publish-github.sh  test-installations.sh
services/nebbie-coordinator/: README.md  config.example.php  schema.sql  world-index.example.json
services/nebbie-coordinator/public/: index.php
tests/: CMakeLists.txt  test_create.cpp  test_io.cpp  test_mvp.cpp  test_nebbietest_mob.cpp  test_overlay.cpp  test_overlays.cpp  test_phase4.cpp  test_reset.cpp  test_session.cpp  test_validate.cpp  test_world_index.cpp
tests/fixtures/: myst.act  myst.dam  myst.gui  myst.mob  myst.pos  myst.shp  myst.spe  myst.wld  myst.zon
tests/fixtures/objects/: 1
tests/fixtures/rooms/: 3001
